# mlflow_server

./: Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
